--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,4 +1,5 @@
 <h2> My Heroes</h2>
+
 <ul class="heroes">
   <li *ngFor="let hero of heroes"
     [class.selected]="hero === selectedHero"
@@ -8,14 +9,14 @@
 </ul>
 
 
-<div *ngIf="selectedHero">
-
+<!--<div *ngIf="selectedHero">
   <h2>{{ selectedHero.name | uppercase }} Details</h2>
-  <div><span>id: </span>{{selectedHero.id}}</div>
+  <div>
+    <span>id: </span>{{selectedHero.id}}
+  </div>
   <div>
     <label>name:
       <input [(ngModel)]="selectedHero.name" placeholder="name">
     </label>
   </div>
-
-</div>
+</div>-->
