--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,7 +1,4 @@
 <div *ngIf="hero">
-
-  <h2>{{ hero.name | uppercase }} Details</h2>
-  <div><span>id: </span>{{hero.id}}</div>
   <h2>{{ hero.name | uppercase }} Details</h2>
   <div>
     <span>id: </span>{{hero.id}}
@@ -11,5 +8,5 @@
       <input [(ngModel)]="hero.name" placeholder="name">
     </label>
   </div>
-
+  <button (click) = "goBack()"> go back </button>
 </div>
